<resources>
    <string name="app_name">Vombo</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="password_label">Password:</string>
    <string name="log_in">Log in</string>
    <string name="back">Back</string>
    <string name="Upload">Upload</string>
    <string name="register">Register</string>
    <string name="sign_in_label">Sign In</string>
    <string name="email">Email</string>
    <string name="phonenumber">Phone number</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="dont_match_password">These passwords don\'t match\.</string>
    <string name="err_group_fields_empty">Please fill groupe name fields.</string>
    <string name="msg_no_dropped_found">No Dropped Time!</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_pickup">Error occurred while pickup:</string>
    <string name="err_post">Error occurred while posting:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="err_send_notification">Error occurred while sending message</string>
    <string name="err_username_phonenumber_dismatch">Username and phonenumber dismatch</string>
    <string name="alert_loading">Loading...</string>
    <string name="alert_checking">Checking...</string>
    <string name="alert_user_list_loading">Loading User List...</string>
</resources>
