<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="20dp" >
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="40dp"
            android:src="@mipmap/ic_launcher"/>
        <EditText
            android:id="@+id/user"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_username_small"
            android:hint="@string/username"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:drawablePadding="5dp"
            android:background="@color/gray_light"
            android:layout_margin="10dp">
            <requestFocus />
        </EditText>
        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/phonenumber"
            android:drawableLeft="@drawable/ic_phonenumber_small"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:drawablePadding="5dp"
            android:background="@color/gray_light"
            android:layout_marginBottom="5dp">
        </EditText>
        <EditText
            android:id="@+id/pwd"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_pwd_small"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:drawablePadding="5dp"
            android:background="@color/gray_light"
            android:inputType="textPassword"
            android:layout_marginTop="5dp">
        </EditText>
        <EditText
            android:id="@+id/confirmpwd"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_pwd_small"
            android:hint="@string/confirm_password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:drawablePadding="5dp"
            android:background="@color/gray_light"
            android:inputType="textPassword"
            android:layout_marginTop="5dp">
        </EditText>
        <LinearLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnback"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/back" />

            <Button
                android:id="@+id/btnReg"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/register"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>